changing fonts and re-organizing code page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,8 @@
         <link href="{{ site.base }}/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ site.base }}/css/group.css" rel="stylesheet">
         <link rel="alternate" type="application/atom+xml" title="Atom"
-            href="{{ site.baseurl }}/blog/blog.xml">
-        <link href='//fonts.googleapis.com/css?family=Quattrocento:400,700'
-              rel='stylesheet' type='text/css'>
-        <link href='//fonts.googleapis.com/css?family=Quattrocento+Sans:400,500,700'
-        rel='stylesheet' type='text/css'>
-        <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400"
+              href="{{ site.baseurl }}/blog/blog.xml">
+        <link href="https://fonts.googleapis.com/css?family=Quattrocento|Quattrocento+Sans:400,400i,700|Raleway:500,700"
               rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -71,9 +67,5 @@
           </p>
         </div>
       </div> <!-- /container -->
-          
-      <!-- Support retina images. -->
-      <script type="text/javascript"
-              src="{{ site.base }}/js/srcset-polyfill.js"></script>
     </body>
 </html>
