--- a/css/group.css
+++ b/css/group.css
@@ -20,7 +20,7 @@ p, div {
     font-family: 'Quattrocento Sans', Helvetica, Arial, sans-serif;
     font-weight:400;
     color:#666;
-    font-size:14px;
+    font-size:16px;
 }
 
 /* Customize first page */
@@ -77,6 +77,7 @@ p, div {
     text-align:center;
     padding-top:5px;
     padding-bottom:5px;
+    margin-bottom:5px;
     letter-spacing:1px;
     font-family: 'Raleway', Helvetica, Arial, san-serif;
     font-weight: 500;
@@ -87,6 +88,10 @@ p, div {
 
 .fa-ul li {
     margin-bottom:5px;
+}
+
+.contact {
+    border-bottom: 1px solid #4b2e83;
 }
 
 
@@ -107,8 +112,7 @@ p, div {
         margin-bottom:10px;
     }
     .contact {
-        /* border-bottom: 1px solid #4b2e83; */
-        margin-bottom: 3em;
+        border-bottom: 0px solid #4b2e83;
     }
     .header,
     .footer p {
@@ -135,6 +139,58 @@ p, div {
       margin: 0 auto 1em;
   }
 }
+
+.jumbotron {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top:0px;
+  margin-bottom: 0px;
+  color: inherit;
+  background-color: inherit;
+}
+.jumbotron p {
+    margin-bottom: 15px;
+    margin-top:0px;
+  font-size: 21px;
+  font-weight: 200;
+}
+.jumbotron > hr {
+  border-top-color: #d5d5d5;
+}
+.container .jumbotron,
+.container-fluid .jumbotron {
+  padding-right: 0px;
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top:0px;
+  border-radius: 0px;
+}
+.jumbotron .container {
+  max-width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .jumbotron {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: 0px;
+  }
+  .container .jumbotron,
+  .container-fluid .jumbotron {
+      margin-top:0px;
+      padding-right: 0px;
+      padding-left: 0px;
+      padding-top: 0px;
+      padding-bottom:0px;
+  }
+  .jumbotron h3,
+  .jumbotron .h3 {
+      margin-top:0px;
+  }
+
+  
+}
+
 
 .container-narrow > hr {
   margin: 30px 0;
