--- a/css/group.css
+++ b/css/group.css
@@ -91,9 +91,8 @@ p, div {
 }
 
 .contact {
-    border-bottom: 1px solid #4b2e83;
+    border-bottom: 0px solid #4b2e83;
 }
-
 
 /* Responsive: Portrait tablets and up */
 @media (min-width: 768px) {
@@ -149,10 +148,8 @@ p, div {
   background-color: inherit;
 }
 .jumbotron p {
-    margin-bottom: 15px;
+    margin-bottom: 0px;
     margin-top:0px;
-  font-size: 21px;
-  font-weight: 200;
 }
 .jumbotron > hr {
   border-top-color: #d5d5d5;
@@ -161,31 +158,41 @@ p, div {
 .container-fluid .jumbotron {
   padding-right: 0px;
   padding-left: 0px;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   margin-top:0px;
+  margin-bottom:0px;
+  margin-left:0px;
+  margin-right:0px;
   border-radius: 0px;
 }
 .jumbotron .container {
   max-width: 100%;
 }
+.jumbotron h3,
+.jumbotron .h3 {
+    margin-top:0px;
+}
 @media screen and (min-width: 768px) {
   .jumbotron {
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-top: 32px;
+    padding-bottom: 32px;
     margin-top: 0px;
   }
   .container .jumbotron,
   .container-fluid .jumbotron {
       margin-top:0px;
+      margin-bottom:0px;
+      margin-left:0px;
+      margin-right:0px;
       padding-right: 0px;
       padding-left: 0px;
-      padding-top: 0px;
-      padding-bottom:0px;
+      padding-top: 32px;
+      padding-bottom:32px;
   }
   .jumbotron h3,
   .jumbotron .h3 {
-      margin-top:0px;
+      font-size:26px;
   }
 
   
