--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,10 @@
       <div class="container">
         <div class="header">
           <div class="title clearfix">Irene Y. Zhang</div>
-	  <p class="subtitle">Ph. D. student - Computer Science &
-	    Engineering<span class="hidden-xs"> -</span> University of
+	  <p class="subtitle">Ph. D. student<span class="hidden-xs">
+	    - </span><br class="visible-xs" />Computer Science &
+	    Engineering<span class="hidden-xs">
+	    - </span><br class="visible-xs" />University of
 	    Washington</p>
 	  <ul class="nav nav-pills nav-justified">
             {% for item in site.navigation %}
