--- a/css/group.css
+++ b/css/group.css
@@ -122,7 +122,10 @@ p, div {
         font-size:.9em;
     }
     .news > img {
-        width:128px;
+        width:64px;
+    }
+    .news > a > img {
+        width:64px;
     }
     /* .media-list { */
     /*     padding-bottom:5px; */
@@ -192,8 +195,8 @@ p, div {
       margin-right:0px;
       padding-right: 0px;
       padding-left: 0px;
-      padding-top: 40px;
-      padding-bottom:40px;
+      padding-top: 20px;
+      padding-bottom:20px;
   }
   .jumbotron h3,
   .jumbotron .h3 {
