--- a/css/group.css
+++ b/css/group.css
@@ -127,12 +127,12 @@ p, div {
     .news > a > img {
         width:64px;
     }
-    /* .media-list { */
-    /*     padding-bottom:5px; */
-    /* } */
-    /* .media { */
-    /*     padding-top:10px; */
-    /* } */
+    .media-list {
+        padding-bottom:5px;
+    }
+    .media {
+        padding-top:10px;
+    }
     .container {
     width: 750px;
     }
@@ -195,8 +195,8 @@ p, div {
       margin-right:0px;
       padding-right: 0px;
       padding-left: 0px;
-      padding-top: 5px;
-      padding-bottom:5px;
+      padding-top: 30px;
+      padding-bottom:30px;
   }
   .jumbotron h3,
   .jumbotron .h3 {
