updating my webpage with MSR stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,11 +36,6 @@
       <div class="container">
         <div class="header">
           <div class="title clearfix">Irene Y. Zhang</div>
-	  <p class="subtitle">Ph. D. student<span class="hidden-xs">
-	    - </span><br class="visible-xs" />Computer Science &
-	    Engineering<span class="hidden-xs">
-	    - </span><br class="visible-xs" />University of
-	    Washington</p>
 	  <ul class="nav nav-pills nav-justified">
             {% for item in site.navigation %}
             {% assign shorturl = item.link | replace: '.html', '' %}
@@ -61,11 +56,8 @@
         {{ content }}
 	<div class="footer">
           <p>
-            <a href="http://www.cs.washington.edu/">Computer Science &amp;
-              Engineering</a>
-            at the
-            <a href="http://www.washington.edu/">University of
-              Washington</a>
+            <a href="https://www.microsoft.com/en-us/research/group/systems-research-group-redmond/">Systems Research</a> at 
+            <a href="https://www.microsoft.com/en-us/research/">Microsoft Research</a>
           </p>
         </div>
       </div> <!-- /container -->
