--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,7 @@
                 </li>
                 {% endfor %}
               </ul>
-              <!-- <p><a href="{{ site.base }}/news/">Older posts&hellip;</a></p> -->
+              <p><a href="{{ site.base }}/news/">&nbsp;&nbsp;&nbsp;Older posts&hellip;</a></p>
             </div>
             </div>
           </div>
@@ -112,8 +112,9 @@
       </div>
       <div class="footer">
         <p>
-          <a href="https://www.microsoft.com/en-us/research/group/systems-research-group-redmond/">Systems Research</a> at 
-          <a href="https://www.microsoft.com/">Microsoft</a>
+          <a href="https://www.microsoft.com/en-us/research/group/systems-research-group-redmond/">Systems
+          Research Group</a> at 
+          <a href="https://www.microsoft.com/">Microsoft Research</a>
         </p>
       </div>
     </body>
