new posts new research

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,12 +67,15 @@
                 <ul class="fa-ul">
 	          <li><i class="fa-li fa fa-envelope"></i>irene.zhang
 	            @microsoft.com</li>
-	          <li><i class="fa-li fa fa-building"></i>Office 2724,
+	          <li><i class="fa-li fa fa-building"></i>Office 2869,
                     Building 99</li>
 	          <li><i class="fa-li fa fa-location-arrow"></i>14820 NE
 	            36th St.
                     <br class="hidden-xs"> Redmond, WA</li>
-	          <li><i class="fa-li fa fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
+	          <li><i class="fa-li fa
+	                        fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
+                  	          <li><i class="fa-li fa fa-twitter"></i><a href="https://twitter.com/schemeprincess">schemeprincess@twitter</a></li>
+
                 </ul>
             </div>
             <div class="contact hidden-xs">
