--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,9 +100,9 @@
                     {% if post.shortnews %}
                     {{ post.content }}
                     {% else %}
-                    <b>New Blog Post: <\b>
+                    <b>New Blog Post:</b>
                         <a href="{{ post.url}}">{{ post.title }}</a>
-                        {% endif %}
+                    {% endif %}
                   </div>
                 </li>
                 {% endfor %}
