--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,11 @@
         <meta name="viewport" content="width=device-width,
 				       initial-scale=1.0">
 	<link href="https://irenezhang.net/" rel="canonical">
-        <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
-        <link href="{{ site.baseurl }}/css/group.css" rel="stylesheet">
+        <base href="https://irenezhang.net/">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/group.css" rel="stylesheet">
         <link rel="alternate" type="application/atom+xml" title="Atom"
-              href="{{ site.baseurl }}blog/blog.xml">
+              href="blog/blog.xml">
         <link href="https://fonts.googleapis.com/css?family=Quattrocento|Quattrocento+Sans:400,400i,700|Raleway:500,700"
               rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -39,7 +40,7 @@
           {% for item in site.navigation %}
           {% assign shorturl = item.link | replace: '.html', '' %}
           <li {% if page.url == shorturl %}class="active"{% endif %}>
-            <a href="{{ site.baseurl }}/{{ item.link }}">
+            <a href="{{ item.link }}">
               {% if page.url == shorturl %}- {% endif %}{{ item.title
               }}{% if page.url == shorturl %} -{% endif %}
             </a>
@@ -89,7 +90,7 @@
                     <a href="{{ post.link }}">
                       {% endif %}
 	              <img class="media-object img-thumbnail"
-                           src="{{ site.baseurl }}/{{ post.photo }}" >
+                           src="{{ post.photo }}" >
                       {% if post.link %} </a> {% endif %}
                   </div>
                   {% endif %}
