--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,
 				       initial-scale=1.0">
 	<link href="https://irenezhang.net/" rel="canonical">
-        <base href="{{ site.url }}">
+        <base href="https://irenezhang.net/">
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/group.css" rel="stylesheet">
         <link rel="alternate" type="application/atom+xml" title="Atom"
