--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,8 +68,7 @@
                 <ul class="fa-ul">
 	          <li><i class="fa-li fa fa-envelope"></i>irene.zhang
 	            @microsoft.com</li>
-	          <li><i class="fa-li fa fa-building"></i>Office 2869,
-                    Building 99</li>
+	          <li><i class="fa-li fa fa-building"></i>Building 99</li>
 	          <li><i class="fa-li fa fa-location-arrow"></i>14820 NE
 	            36th St.
                     <br class="hidden-xs"> Redmond, WA</li>
