Add zip code to MSR address
I use your webpage to look up MSR's mailing address every time I forget it. Adding the zip code will make my life marginally easier.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
 	          <li><i class="fa-li fa fa-building"></i>Building 99</li>
 	          <li><i class="fa-li fa fa-location-arrow"></i>14820 NE
 	            36th St.
-                    <br class="hidden-xs"> Redmond, WA</li>
+                    <br class="hidden-xs"> Redmond, WA 98052</li>
 	          <li><i class="fa-li fa
 	                        fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
                   	          <li><i class="fa-li fa fa-twitter"></i><a href="https://twitter.com/schemeprincess">schemeprincess@twitter</a></li>
