move to mastodon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,8 @@
               href="blog/blog.xml">
         <link href="https://fonts.googleapis.com/css?family=Quattrocento|Quattrocento+Sans:400,400i,700|Raleway:500,700"
               rel="stylesheet">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/f08ee12e29.js" crossorigin="anonymous"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <!-- Piwik -->
         <script type="text/javascript">
@@ -74,7 +75,7 @@
                     <br class="hidden-xs"> Redmond, WA 98052</li>
 	          <li><i class="fa-li fa
 	                        fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
-                  	          <li><i class="fa-li fa fa-twitter"></i><a href="https://twitter.com/schemeprincess">schemeprincess@twitter</a></li>
+                  	          <li><i class="fa-li fa-brands fa-mastodon"></i><a href="https://discuss.systems/@irene">irene@discuss.systems</a></li>
 
                 </ul>
             </div>
