--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -44,7 +44,7 @@
 				<a class="btn btn-default btn-xs" href="{{ code|escape }}">
                                   <i class="fa fa-code"></i> code</a>
                                 {%- endif %}
-			        {%- for type, url in (entry|extra_urls).iteritems() %}
+			        {%- for type, url in (entry|extra_urls).items() %}
 				<a class="btn btn-default btn-xs" href="{{ url|escape }}">
                                   <i class="fa fa-chevron-right"></i> {{ type|escape }}</a>
 			        {%- endfor %}
