--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,5 +27,19 @@
         {% endif %}
       {% endfor %}
     </nav>
+    <p class="lead">Contact</p>
+    
+    <ul class="fa-ul">
+  <li><i class="fa-li fa fa-envelope"></i>irene.zhang
+    @microsoft.com</li>
+  <li><i class="fa-li fa fa-building"></i>Building 99</li>
+  <li><i class="fa-li fa fa-location-arrow"></i>14820 NE
+    36th St.
+    <br class="hidden-xs"> Redmond, WA 98052</li>
+  <li><i class="fa-li fa
+	        fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
+  <li><i class="fa-li fa-brands fa-mastodon"></i><a href="https://discuss.systems/@irene">irene@discuss.systems</a></li>
+</ul>
+
   </div>
 </div>
