--- a/_layouts/bibtemplate.html
+++ b/_layouts/bibtemplate.html
@@ -46,30 +46,43 @@ pre{
 {% if entry.type == 'unpublished' %}
 <a href="{{ entry.doi | prepend: 'https://arxiv.org/abs/' }}" target="_blank"><button class="btn btn-primary btm-sm">ARXIV</button></a>
 {% else %}
-<a href="{{ entry.doi | prepend: 'http://doi.org/' }}" target="_blank"><button class="btn btn-primary btm-sm">DOI</button></a>
+<a href="{{ entry.doi | prepend: 'http://doi.org/' }}" target="_blank"><button class="btn btn-light btm-sm">DOI</button></a>
 {% endif %}
 {% endif %}
 
 {% if entry.type == 'unpublished' or entry.type == 'article' or  entry.type == 'thesis' or entry.type == 'inproceedings' or entry.type == 'report' %}
-<button class="btn btn-danger btm-sm"  onclick="toggleBibtex{{entry.key}}()">BIB</button>
+<button type="button" class="btn btn-light btn-sm"
+        onclick="toggleBibtex{{entry.key}}()">BIB</button>
 {% endif %}
 
 {% if entry.abstract %}
-<button class="btn btn-warning btm-sm"  onclick="toggleAbstract{{entry.key}}()">ABSTRACT</button>
+<button type="button"  class="btn btn-sm btn-light" onclick="toggleAbstract{{entry.key}}()">ABSTRACT</button>
+{% endif %}
+
+{% if entry.link %}
+<a href="{{ entry.link }}" class="btn btn-sm btn-light">PDF</a>
+{% endif %}
+
+{% if entry.code %}
+<a href="{{ entry.code }}" class="btn btn-sm btn-light">CODE</a>
+{% endif %}
+
+{% if entry.talk %}
+<a href="{{ entry.talk }}" class="btn btn-sm btn-light">TALK</a>
 {% endif %}
 
 {% if entry.abstract %}
-<div id="a{{entry.key}}" style="display: none; background-color:black; border-radius:5px; padding:10px; margin-bottom:20px;">
+<div id="a{{entry.key}}" style="display: none; background-color:gray; border-radius:1px; padding:1px">
 <pre>{{ entry.bibtex | remove: "entry.abstract" }}</pre>
 </div>
 {% else %}
-<div id="a{{entry.key}}" style="display: none; background-color:black; border-radius:5px; padding:10px; margin-bottom:20px;">
+<div id="a{{entry.key}}" style="display: none; background-color:gray; border-radius:1px; padding:1px">
 <pre>{{ entry.bibtex }}</pre>
 </div>
 {% endif %}
 
-<div id="b{{entry.key}}" style="display: none; background-color:black; border-radius:5px; padding:10px; margin-bottom:20px;">
-<pre>{{entry.abstract}}</pre>
+<div id="b{{entry.key}}" style="display: none; background-color:white; border-radius:1px; padding:1px">
+  <div class="card-body"><p class="card-text">{{entry.abstract}}</p></div>
 </div>
 
 <script>
