--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,12 @@
 
     {% include sidebar.html %}
 
-    <div class="content fluid-container">
-      {{ content }}
+    <div class="content container">
+      <div class="row">
+        <div class="col">
+          {{ content }}
+          </div>
+        </div>
     </div>
 
   </body>
