--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -31,19 +31,19 @@
  * Update the foundational and global aspects of the page.
  */
 
-html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-}
-@media (min-width: 48em) {
-  html {
-    font-size: 16px;
-  }
-}
-@media (min-width: 58em) {
-  html {
-    font-size: 20px;
-  }
-}
+/* html { */
+/*   font-family: "PT Sans", Helvetica, Arial, sans-serif; */
+/* } */
+/* @media (min-width: 48em) { */
+/*   html { */
+/*     font-size: 16px; */
+/*   } */
+/* } */
+/* @media (min-width: 58em) { */
+/*   html { */
+/*     font-size: 20px; */
+/*   } */
+/* } */
 
 
 /*
