--- a/assets/css/poole.css
+++ b/assets/css/poole.css
@@ -47,16 +47,15 @@ body {
   padding: 0;
 }
 
-html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-}
-@media (min-width: 38em) {
-  html {
-    font-size: 20px;
-  }
-}
+/* html { */
+/*   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
+/*   font-size: 16px; */
+/* } */
+/* @media (min-width: 38em) { */
+/*   html { */
+/*     font-size: 20px; */
+/*   } */
+/* } */
 
 body {
   color: #515151;
