--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,18 +27,13 @@
         {% endif %}
       {% endfor %}
     </nav>
-    <p class="lead">Contact</p>
     
-    <ul class="fa-ul">
-  <li><i class="fa-li fa fa-envelope"></i>irene.zhang
-    @microsoft.com</li>
-  <li><i class="fa-li fa fa-building"></i>Building 99</li>
-  <li><i class="fa-li fa fa-location-arrow"></i>14820 NE
-    36th St.
-    <br class="hidden-xs"> Redmond, WA 98052</li>
-  <li><i class="fa-li fa
-	        fa-github-alt"></i><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
-  <li><i class="fa-li fa-brands fa-mastodon"></i><a href="https://discuss.systems/@irene">irene@discuss.systems</a></li>
+    <ul class="list-unstyled">
+  <li>irene.zhang@microsoft.com</li>
+  <li>Building 99</li>
+  <li><address>14820 NE 36th St.<br />Redmond, WA 98052<br /></address></li>
+  <li><a href="https://github.com/iyzhang/">iyzhang@github</a></li>
+  <li><a href="https://discuss.systems/@irene">irene@discuss.systems</a></li>
 </ul>
 
   </div>
